@@ -1,6 +1,8 @@
 package com.ptip.program.service;
 
 import com.ptip.common.exception.ResourceNotFoundException;
+import com.ptip.like.Repository.LikeRepository;
+import com.ptip.like.domain.TargetType;
 import com.ptip.program.dto.PageResponseDto;
 import com.ptip.program.dto.ProgramResponseDto;
 import com.ptip.program.entity.Program;
@@ -12,7 +14,9 @@ import org.springframework.data.domain.Pageable;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
 import java.util.List;
+import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
@@ -20,10 +24,12 @@ public class ProgramService {
 
     private final ProgramRepository programRepository;
     private final ProgramRepositoryCustom programRepositoryCustom;
+    private final LikeRepository likeRepository;
 
-    public ProgramService(ProgramRepository programRepository, ProgramRepositoryCustom programRepositoryCustom) {
+    public ProgramService(ProgramRepository programRepository, ProgramRepositoryCustom programRepositoryCustom, LikeRepository likeRepository) {
         this.programRepository = programRepository;
         this.programRepositoryCustom = programRepositoryCustom;
+        this.likeRepository = likeRepository;
     }
 
     public ProgramResponseDto findProgram(int id) {
@@ -32,13 +38,30 @@ public class ProgramService {
         return ProgramResponseDto.from(program);
     }
 
-    public PageResponseDto<ProgramResponseDto> findPrograms(int page, int size, String sort, String keyword, List<String> categories, List<String> modes, List<String> tags) {
+    public PageResponseDto<ProgramResponseDto> findPrograms(int page, int size, String sort, String keyword, List<String> categories, List<String> modes, List<String> tags, Integer userId) {
         Pageable pageable = PageRequest.of(page, size, Sort.by(sort).ascending());
         Page<Program> result = programRepositoryCustom.getPrograms(keyword, categories, modes, tags, pageable);
 
+        // 현재 페이지에 있는 프로그램 ID들 추출
+        List<Integer> programIds = result.stream()
+                .map(Program::getId)
+                .toList();
+
+        // 로그인한 사용자가 좋아요한 프로그램 ID를 한 번에 조회
+        final Set<Integer> likedProgramIds;
+        if (userId != null && !programIds.isEmpty()) {
+            likedProgramIds = likeRepository.findAllByUserIdAndTargetTypeAndTargetIdIn(userId, TargetType.교내외, programIds)
+                    .stream()
+                    .map(like -> like.getTargetId())
+                    .collect(Collectors.toSet());
+        } else {
+            likedProgramIds = Collections.emptySet();
+        }
+
+        // DTO 변환 (liked 여부 포함)
         List<ProgramResponseDto> items = result.getContent().stream()
-                .map(ProgramResponseDto::from)
-                .collect(Collectors.toList());
+                .map(program -> ProgramResponseDto.of(program, likedProgramIds.contains(program.getId())))
+                .toList();
 
         return PageResponseDto.<ProgramResponseDto>builder()
                 .items(items)
